Reduce image size

--- a/templates/index.html
+++ b/templates/index.html
@@ -701,7 +701,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <img class="img-fluid d-block mx-auto" src="static/assets/img/portfolio/g_header.png" alt="Controller img" />
+                                    <img class="img-fluid d-block mx-auto" src="static/assets/img/portfolio/g_header.jpg" alt="Controller img" />
                                     <h2 class="text-uppercase">Breakout</h2>
                                     <p class="item-intro text-muted">Break all blocks to win.</p>
                                     <p>
