add problem solving section in the portfolio section

--- a/templates/index.html
+++ b/templates/index.html
@@ -219,6 +219,23 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- PROBLEM SOLVING -->
+
+                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0 d-flex justify-content-center">
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal7">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="static/assets/img/portfolio/p_problem2.png" alt="Problem Solving" />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Problem Solving</div>
+                                <div class="portfolio-caption-subheading text-muted">LeetCode Challenges</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -796,6 +813,46 @@
             </div>
         </div>
 
+        <!-- Portfolio item 6 PROBLEM SOLVING-->
+
+        <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="close-modal" data-bs-dismiss="modal"><img src="static/assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Project details-->
+                                    <img class="img-fluid d-block mx-auto" src="static/assets/img/portfolio/p_header.jpg" alt="Rubiks Cube" />
+                                    <h2 class="text-uppercase">LeetCode</h2>
+                                    <p class="item-intro text-muted">Building Problem-Solving Expertise</p>
+                                    <p>
+                                        Engaging with a wide range of algorithmic problems on LeetCode to refine my
+                                        coding skills and deepen my understanding of data structures,
+                                        preparing for real-world challenges.
+                                    </p>
+                                    <ul class="list-inline">
+                                        <li>
+                                            <strong>Creator:</strong>
+                                            Eike Hanel
+                                        </li>
+                                        <li>
+                                            <strong>GitHub:</strong>
+                                            <a href="https://github.com/EikeHanel/LeetCode">Link</a>
+                                        </li>
+                                    </ul>
+                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                                        <i class="fas fa-xmark me-1"></i>
+                                        Close
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- Bootstrap core JS-->
 
