--- a/templates/index.html
+++ b/templates/index.html
@@ -451,7 +451,7 @@
                                     <img class="img-fluid d-block mx-auto" src="static/assets/img/portfolio/h_education.png" alt="Logo of University Emden/Oldenburg and the DESY Institute" />
                                     <h2 class="text-uppercase">Bachelor's Thesis</h2>
                                     <p class="item-intro text-muted">Wavefrontsesnor - Initial setup and experimental use</p>
-                                                                        <p>
+                                    <p>
                                         This thesis examines the implementation of a new wavefront sensor and explores
                                         its various applications. It provides a detailed overview of the underlying
                                         theory of wavefront sensors and their multiple uses. Additionally,
@@ -502,7 +502,54 @@
                                         </li>
                                     </ul>
 
-                                    <h2 class="text-uppercase">Udemy Courses</h2>
+                                    <h2 class="text-uppercase">
+                                        Certificates
+                                    </h2>
+                                    <p class="item-intro text-muted">
+                                        Certificates earned via academic institutions or online courses
+                                    </p>
+
+                                    <h3 class="text-uppercase">
+                                        Expertise in Laser Safety Officer Certification (BGV B2)
+                                        <a href="https://www.hs-emden-leer.de/" target="_blank">
+                                            <i class="fas fa-external-link-alt"></i>
+                                        </a>
+                                    </h3>
+                                    <p class="item-intro text-muted">
+                                        Certification for qualification as a Laser Safety Officer, obtained through a course at the University of Applied Sciences Emden/Leer, Germany.
+                                    </p>
+                                    <ul class="list-inline">
+                                        <li>
+                                            <strong>Institution:</strong>
+                                            University of Applied Sciences Emden/Leer, Germany
+                                        </li>
+                                        <li>
+                                            <strong>Certificate:</strong>
+                                            Can be provided upon request.
+                                        </li>
+                                    </ul>
+
+                                    <h3 class="text-uppercase">
+                                        CS50x - Introduction to Computer Science
+                                        <a href="https://cs50.harvard.edu/x/2024/" target="_blank">
+                                            <i class="fas fa-external-link-alt"></i>
+                                        </a>
+                                    </h3>
+                                    <p class="item-intro text-muted">
+                                        This is CS50, Harvard University’s introduction to the intellectual enterprises of computer science and the art of programming, for concentrators and non-concentrators alike, with or without prior programming experience.
+                                    </p>
+                                    <ul class="list-inline">
+                                        <li>
+                                            <strong>Course Instructor:</strong>
+                                            David J. Malan
+                                        </li>
+                                        <li>
+                                            <strong>Certificate:</strong>
+                                            <a href="https://cs50.harvard.edu/certificates/3106501f-27ff-4298-95ec-699595443979"
+                                               target="_blank" rel="noopener noreferrer">View Certificate</a>
+                                        </li>
+                                    </ul>
+
                                     <h3 class="text-uppercase">
                                         100 Days of Code: The Complete Python Pro Bootcamp
                                         <a href="https://www.udemy.com/course/100-days-of-code/" target="_blank">
