Add link-icon and link for the portfolio website.

--- a/templates/index.html
+++ b/templates/index.html
@@ -698,6 +698,9 @@
                                         <h2 class="text-uppercase" style="padding-bottom: 20px;">Web Development</h2>
                                         <h3 class="text-uppercase">
                                             Portfolio Website
+                                            <a href="https://github.com/EikeHanel/Portfolio-Website" target="_blank">
+                                            <i class="fas fa-external-link-alt link-icon"></i>
+                                            </a>
                                         </h3>
                                         <p class="item-intro text-muted">
                                             A website to display my portfolio.
