Add link-icon and link for the portfolio website.

--- a/templates/index.html
+++ b/templates/index.html
@@ -706,7 +706,7 @@
                                             A website to display my portfolio.
                                         </p>
                                         <h3 class="text-uppercase">
-                                            Cafe and Wi-Fi
+                                            Cafe and Wi-Fi Website
                                             <a href="https://github.com/EikeHanel/Cafe-and-Wifi" target="_blank">
                                             <i class="fas fa-external-link-alt link-icon"></i>
                                             </a>
