Add new certificate

--- a/templates/index.html
+++ b/templates/index.html
@@ -569,6 +569,26 @@
                                         </li>
                                     </ul>
 
+                                    <h3 class="text-uppercase">
+                                        Computer Science 101: Master the Theory Behind Programming
+                                        <a href="https://www.udemy.com/course/computer-science-101-master-the-theory-behind-programming/" target="_blank" style="text-decoration: none;">
+                                            <i class="fas fa-external-link-alt" style="margin-left: 10px;"></i>
+                                        </a>
+                                    </h3>
+                                    <p class="item-intro text-muted">Computer Science 101: Learn Computer Science to become a better Programmer and Software Engineer.</p>
+
+                                    <ul class="list-inline">
+                                        <li>
+                                            <strong>Course Instructor:</strong>
+                                            Kurt Anderson
+                                        </li>
+                                        <li>
+                                            <strong>Certificate:</strong>
+                                            <a href="https://www.udemy.com/certificate/UC-3e392ff6-4620-4e07-a234-f42b09fe9e79/"
+                                               target="_blank" rel="noopener noreferrer">View Certificate</a>
+                                        </li>
+                                    </ul>
+
                                     <h3 class="text-uppercase">Python for Data Science and Machine Learning Bootcamp
                                         <a href="https://www.udemy.com/course/python-for-data-science-and-machine-learning-bootcamp/" target="_blank">
                                             <i class="fas fa-external-link-alt"></i>
@@ -607,22 +627,21 @@
                                         </li>
                                     </ul>
 
-                                    <h3 class="text-uppercase">
-                                        Computer Science 101: Master the Theory Behind Programming
-                                        <a href="https://www.udemy.com/course/computer-science-101-master-the-theory-behind-programming/" target="_blank" style="text-decoration: none;">
+                                     <h3 class="text-uppercase">
+                                        Deep Learning A-Z 2024: Neural Networks, AI & ChatGPT Prize
+                                        <a href="https://www.udemy.com/course/deeplearning/" target="_blank" style="text-decoration: none;">
                                             <i class="fas fa-external-link-alt" style="margin-left: 10px;"></i>
                                         </a>
                                     </h3>
-                                    <p class="item-intro text-muted">Computer Science 101: Learn Computer Science to become a better Programmer and Software Engineer.</p>
-
+                                    <p class="item-intro text-muted">Learn to create Deep Learning models in Python from two Machine Learning, Data Science experts. Code templates included.</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Course Instructor:</strong>
-                                            Kurt Anderson
+                                            Kirill Eremenko & Hadelin de Ponteves
                                         </li>
                                         <li>
                                             <strong>Certificate:</strong>
-                                            <a href="https://www.udemy.com/certificate/UC-3e392ff6-4620-4e07-a234-f42b09fe9e79/"
+                                            <a href="https://udemy-certificate.s3.amazonaws.com/pdf/UC-a526ac0d-6fcc-4597-8b53-239928988dca.pdf"
                                                target="_blank" rel="noopener noreferrer">View Certificate</a>
                                         </li>
                                     </ul>
