Add new certificate

--- a/templates/index.html
+++ b/templates/index.html
@@ -551,6 +551,27 @@
                                     </ul>
 
                                     <h3 class="text-uppercase">
+                                        CS50's Introduction to Programming with Python
+                                        <a href="https://cs50.harvard.edu/python/2022/" target="_blank">
+                                            <i class="fas fa-external-link-alt"></i>
+                                        </a>
+                                    </h3>
+                                    <p class="item-intro text-muted">
+                                         An introduction to programming using a language called Python. Learn how to read and write code as well as how to test and “debug” it.
+                                    </p>
+                                    <ul class="list-inline">
+                                        <li>
+                                            <strong>Course Instructor:</strong>
+                                            David J. Malan
+                                        </li>
+                                        <li>
+                                            <strong>Certificate:</strong>
+                                            <a href="https://certificates.cs50.io/c2c6f09e-2c31-41db-b1f7-20b975aaaa8d.pdf?size=letter"
+                                               target="_blank" rel="noopener noreferrer">View Certificate</a>
+                                        </li>
+                                    </ul>
+
+                                    <h3 class="text-uppercase">
                                         100 Days of Code: The Complete Python Pro Bootcamp
                                         <a href="https://www.udemy.com/course/100-days-of-code/" target="_blank">
                                             <i class="fas fa-external-link-alt"></i>
