Add new coding projects

--- a/templates/index.html
+++ b/templates/index.html
@@ -710,7 +710,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
 
-                                    <!-- Project details-->
+                                    <!-- Python Scripting -->
                                     <img class="img-fluid d-block mx-auto" src="static/assets/img/portfolio/h_code.jpg" alt="Code" />
                                     <div>
                                         <h2 class="text-uppercase" style="padding-bottom: 20px;">Python Scripting</h2>
@@ -732,7 +732,18 @@
                                         <p class="item-intro text-muted">
                                             A two player Tic Tac Toe game, played in the terminal.
                                         </p>
+                                        <h3 class="text-uppercase">
+                                            Unit Converter
+                                            <a href="https://github.com/EikeHanel/unit_converter" target="_blank">
+                                            <i class="fas fa-external-link-alt link-icon"></i>
+                                            </a>
+                                        </h3>
+                                        <p class="item-intro text-muted">
+                                            Terminal based unit converter, compatible with command-line arguments.
+                                        </p>
                                     </div>
+
+                                    <!-- Web Development -->
 
                                     <div style="padding-top: 75px;">
                                         <h2 class="text-uppercase" style="padding-bottom: 20px;">Web Development</h2>
@@ -756,6 +767,8 @@
                                         </p>
                                     </div>
 
+                                    <!-- Graphical User Interface -->
+
                                     <div style="padding-top: 75px;">
                                         <h2 class="text-uppercase" style="padding-bottom: 20px;">Graphical User Interface</h2>
 
@@ -775,7 +788,23 @@
                                             </a>
                                         </h3>
                                         <p class="item-intro text-muted">A simple speed typing test, counting the words per minute.</p>
+                                        <h3 class="text-uppercase">
+                                            Appointment Maker
+                                            <a href="https://github.com/EikeHanel/appointment_maker" target="_blank">
+                                            <i class="fas fa-external-link-alt link-icon"></i>
+                                            </a>
+                                        </h3>
+                                        <p class="item-intro text-muted">An application that manages loaned items and schedules appointments efficiently.</p>
+                                        <h3 class="text-uppercase">
+                                            Finance Tracker
+                                            <a href="https://github.com/EikeHanel/finance_tracker" target="_blank">
+                                            <i class="fas fa-external-link-alt link-icon"></i>
+                                            </a>
+                                        </h3>
+                                        <p class="item-intro text-muted">An application that can help you manage your finances.</p>
                                     </div>
+
+                                    <!-- Game Development -->
 
                                     <div style="padding-top: 75px;">
                                         <h2 class="text-uppercase" style="padding-bottom: 20px;">Game Development</h2>
@@ -789,6 +818,8 @@
                                             Break all blocks to win.
                                         </p>
                                     </div>
+
+                                    <!-- Problem Solving -->
 
                                     <div style="padding-top: 75px;">
                                         <h2 class="text-uppercase" style="padding-bottom: 20px;">Problem Solving</h2>
